--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
+org.gradle.jvmargs=-Xmx8096m
 org.gradle.daemon=false
 
 version_minecraft=1.19.2
 version_parchment=2022.11.27
 version_forge=43.2.0
+
+version_kubejs=1902.6.0-build.142
+version_rhino=1902.2.2-build.268
+version_architectury=6.5.85
