--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ def version_replaces = [
         'version'      : project.version,
         'mc_version'   : version_minecraft,
         'forge_version': version_forge,
+        'kubejs_version': version_kubejs,
 ]
 
 def jsonPatterns = ["**/*.json", "**/*.mcmeta"]
@@ -64,7 +65,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    //mappings channel: 'official', version: '1.19.2'
+    //mappings channel: 'official', version: "${version_minecraft}"
     mappings channel: 'parchment', version: "${version_parchment}-${version_minecraft}"
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
